# flexvocabtree

./: .gitignore  CLAUDE.md  cluster.py  image.py  pipeline.py  pyproject.toml  start_python_env.sh  tests.py  vocabulary_tree.py
src/flexvocabtree/: cluster.py  image.py  node.py  pipeline.py  tests.py  vocabulary_tree.py  weights.py
tests/flexvocabtree/: test_cluster.py  test_image.py  test_node.py  test_weights.py
