[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flex-vocab-tree"
version = "0.1.0"
description = "Vocabulary tree implementation flexible for different use cases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "columnar>=1.4.1",
    "flake8>=7.3.0",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 120
